<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:background="@color/gray"
        android:gravity="end|center"
        android:textSize="40pt"
        android:layout_marginBottom="1pt"
        android:inputType="textPersonName"
        android:text="0" />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <TableRow
                android:layout_marginBottom="1pt"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/BtnAC"
                    android:text="@string/ac"
                    android:layout_marginRight="1pt"
                    android:layout_height="30pt"
                    android:layout_width="30pt"
                    android:onClick="acEvent"
                    android:layout_weight="1"
                    android:background="@color/blueback"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/BtnPlusMiuns"
                    android:text="@string/plusminus"
                    android:layout_marginRight="1pt"
                    android:layout_height="30pt"
                    android:layout_width="30pt"
                    android:layout_weight="1"
                    android:onClick="numberEvent"
                    android:background="@color/blueback"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/BtnPercentage"
                    android:text="@string/percentage"
                    android:layout_marginRight="1pt"
                    android:layout_height="30pt"
                    android:layout_width="30pt"
                    android:onClick="percentageEvent"
                    android:layout_weight="1"
                    android:background="@color/blueback"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/BtnDivide"
                    android:text="@string/divided"
                    android:textColor="#FFF"
                    android:layout_marginRight="1pt"
                    android:layout_height="30pt"
                    android:layout_width="30pt"
                    android:onClick="operatorEvent"
                    android:layout_weight="1"
                    android:background="@color/design_default_color_primary"/>
            </TableRow>

        <TableRow
            android:layout_marginBottom="1pt"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Btn7"
                android:text="@string/seven"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:layout_width="30pt"
                android:onClick="numberEvent"
                android:layout_weight="1"
                android:background="@color/blueback"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Btn8"
                android:text="@string/eight"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:layout_width="30pt"
                android:onClick="numberEvent"
                android:layout_weight="1"
                android:background="@color/blueback"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Btn9"
                android:text="@string/nine"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:layout_width="30pt"
                android:onClick="numberEvent"
                android:layout_weight="1"
                android:background="@color/blueback"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/BtnMultiply"
                android:text="@string/multiply"
                android:textColor="#FFF"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:layout_width="30pt"
                android:onClick="operatorEvent"
                android:layout_weight="1"
                android:background="@color/design_default_color_primary"/>
        </TableRow>
        <TableRow
            android:layout_marginBottom="1pt"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Btn4"
                android:text="@string/four"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:layout_width="30pt"
                android:onClick="numberEvent"
                android:layout_weight="1"
                android:background="@color/blueback"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Btn5"
                android:text="@string/five"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:layout_width="30pt"
                android:onClick="numberEvent"
                android:layout_weight="1"
                android:background="@color/blueback"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Btn6"
                android:text="@string/six"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:layout_width="30pt"
                android:onClick="numberEvent"
                android:layout_weight="1"
                android:background="@color/blueback"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Btnsub"
                android:text="@string/minus"
                android:textColor="#FFF"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:layout_width="30pt"
                android:onClick="operatorEvent"
                android:layout_weight="1"
                android:background="@color/design_default_color_primary"/>
        </TableRow>
        <TableRow
            android:layout_marginBottom="1pt"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Btn1"
                android:text="@string/one"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:layout_width="30pt"
                android:onClick="numberEvent"
                android:layout_weight="1"
                android:background="@color/blueback"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Btn2"
                android:text="@string/two"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:layout_width="30pt"
                android:onClick="numberEvent"
                android:layout_weight="1"
                android:background="@color/blueback"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Btn3"
                android:text="@string/three"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:layout_width="30pt"
                android:onClick="numberEvent"
                android:layout_weight="1"
                android:background="@color/blueback"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Btnplus"
                android:text="@string/plus"
                android:textColor="#FFF"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:layout_width="30pt"
                android:onClick="operatorEvent"
                android:layout_weight="1"
                android:background="@color/design_default_color_primary"
                tools:ignore="HardcodedText" />
        </TableRow>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TableRow
                android:layout_marginBottom="1pt"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/Btn0"
                    android:text="@string/zero"
                    android:layout_marginRight="1pt"
                    android:layout_height="30pt"
                    android:layout_width="46pt"
                    android:onClick="numberEvent"
                    android:layout_weight="2"
                    android:background="@color/blueback"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/BtnDot"
                    android:text="@string/dot"
                    android:layout_marginRight="1pt"
                    android:layout_height="30pt"
                    android:layout_width="46pt"
                    android:onClick="numberEvent"
                    android:layout_weight="1"
                    android:background="@color/blueback"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/BtnEqual"
                    android:text="@string/equal"
                    android:textColor="#FFF"
                    android:layout_marginRight="1pt"
                    android:layout_height="30pt"
                    android:layout_width="30pt"
                    android:onClick="equalEvent"
                    android:layout_weight="1"
                    android:background="@color/design_default_color_primary"/>
            </TableRow>
        </LinearLayout>
    </TableLayout>

</LinearLayout>